feat(Auth): Error handling, User profile, User functions - Add error handling - Add user profile and change password function - Enhance authentication
